--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,6 +38,17 @@
             android:textSize="25sp"
             android:layout_gravity="center_horizontal"
             />
+
+        <Button
+            android:id="@+id/btnFill"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+           android:text="FILL MY MAN FILL!!"
+            android:textColor="#FFFFFF"
+            android:textSize="25sp"
+            android:layout_gravity="center_horizontal"
+            />
         <!--TextView
             android:id="@+id/textVIew2"
             android:layout_width="wrap_content"
