--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_gravity="center"
-    android:background="#000000"
+    android:background="#ffffff"
     android:layout_height="match_parent">
 
     <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
@@ -12,19 +12,29 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:orientation="vertical"
+        android:paddingTop="40dp"
         android:layout_gravity="center"
-        android:background="#000000"
+        android:background="#ffffff"
         android:layout_height="match_parent"
         tools:context="bs.inc.echodot.MainActivity">
 
         <com.github.anastr.speedviewlib.SpeedView
             android:id="@+id/speedView"
-            android:layout_width="match_parent"
+            android:layout_width="270dp"
             android:layout_margin="20dp"
-            android:layout_height="wrap_content"
+            android:layout_height="170dp"
+            android:layout_gravity="center"
+            android:background="#ffffff"
+            app:sv_speedometerWidth="20dp"
             app:sv_unit="dBm"
-            app:sv_speedTextColor="#FFFFFF"
-            app:sv_unitTextColor="#FFFFFF"
+            app:sv_textColor="#ffffff"
+            app:sv_markColor="#000000"
+            app:sv_highSpeedColor="#393939"
+            app:sv_lowSpeedColor="#a4a4a4"
+            app:sv_mediumSpeedColor="#707070"
+            app:sv_indicatorColor="#ea3030"
+            app:sv_speedTextColor="#000000"
+            app:sv_unitTextColor="#000000"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="17dp" />
 
@@ -33,24 +43,44 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-            android:text="Yo mams!"
-            android:textColor="#FFFFFF"
-            android:textSize="25sp"
             android:layout_gravity="center_horizontal"
-            />
+            android:fontFamily="@font/montserrat"
+            android:text="User information"
+            android:textAlignment="gravity"
+            android:textColor="#000000"
+            android:textSize="20sp" />
 
-        <Button
+        <!--Button
             android:id="@+id/btnFill"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
-           android:text="FILL MY MAN FILL!!"
-            android:textColor="#000000"
+            android:layout_gravity="center_horizontal"
             android:background="#000000"
             android:onClick="click2"
-            android:textSize="25sp"
+            android:text="Set upload interval"
+            android:textAllCaps="false"
+            android:textStyle="normal"
+            android:textColor="#32CD32"
+            android:textSize="20sp" /-->
+        <Button
+            android:id="@+id/btnModal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
             android:layout_gravity="center_horizontal"
-            />
+            android:layout_marginTop="10dp"
+            android:background="@drawable/know_more_btn"
+            android:fontFamily="@font/montserrat"
+            android:paddingLeft="18dp"
+            android:paddingRight="18dp"
+            android:text="Know more"
+
+            android:textColor="#101010" />
+
+
+
+
         <!--TextView
             android:id="@+id/textVIew2"
             android:layout_width="wrap_content"
