--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,98 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_gravity="center"
-    android:background="#ffffff"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:orientation="vertical"
-        android:paddingTop="40dp"
-        android:layout_gravity="center"
-        android:background="#ffffff"
         android:layout_height="match_parent"
-        tools:context="bs.inc.echodot.MainActivity">
+        android:orientation="vertical">
 
-        <com.github.anastr.speedviewlib.SpeedView
-            android:id="@+id/speedView"
-            android:layout_width="270dp"
-            android:layout_margin="20dp"
-            android:layout_height="170dp"
-            android:layout_gravity="center"
-            android:background="#ffffff"
-            app:sv_speedometerWidth="20dp"
-            app:sv_unit="dBm"
-            app:sv_textColor="#ffffff"
-            app:sv_markColor="#000000"
-            app:sv_highSpeedColor="#393939"
-            app:sv_lowSpeedColor="#a4a4a4"
-            app:sv_mediumSpeedColor="#707070"
-            app:sv_indicatorColor="#ea3030"
-            app:sv_speedTextColor="#000000"
-            app:sv_unitTextColor="#000000"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="17dp" />
+        <FrameLayout
+            android:id="@+id/container_body"
+            android:layout_width="fill_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
 
-        <TextView
-            android:id="@+id/textVIew"
-            android:layout_width="wrap_content"
+        <android.support.design.widget.BottomNavigationView
+            android:id="@+id/navigation"
+            android:layout_width="match_parent"
+            android:layout_gravity="bottom"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:fontFamily="@font/montserrat"
-            android:text="User information"
-            android:textAlignment="gravity"
-            android:textColor="#000000"
-            android:textSize="20sp" />
-
-        <!--Button
-            android:id="@+id/btnFill"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:background="#000000"
-            android:onClick="click2"
-            android:text="Set upload interval"
-            android:textAllCaps="false"
-            android:textStyle="normal"
-            android:textColor="#32CD32"
-            android:textSize="20sp" /-->
-        <Button
-            android:id="@+id/btnModal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
-            android:background="@drawable/know_more_btn"
-            android:fontFamily="@font/montserrat"
-            android:paddingLeft="18dp"
-            android:paddingRight="18dp"
-            android:text="Know more"
-
-            android:textColor="#101010" />
-
-
-
-
-        <!--TextView
-            android:id="@+id/textVIew2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/textVIew"
-            android:layout_centerHorizontal="true"
-            android:textColor="#FFFFFF"
-            android:text="no mams"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent" /-->
-
+            android:background="?android:attr/windowBackground"
+            app:menu="@menu/navigation" />
     </LinearLayout>
-</ScrollView>
+</android.support.design.widget.CoordinatorLayout>
