--- a/app/src/main/res/layout/activity_settings.xml
+++ b/app/src/main/res/layout/activity_settings.xml
@@ -9,8 +9,8 @@
         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content" />
     <Button
+        android:id="@+id/settingbutton"
         android:layout_width="wrap_content"
-        android:onClick="click"
         android:layout_gravity="center_horizontal"
         android:layout_height="wrap_content"
         android:text="CLICK"/>
