--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -17,25 +17,44 @@
         android:background="#ffffff"
         android:layout_height="match_parent">
 
-        <com.github.anastr.speedviewlib.SpeedView
-            android:id="@+id/speedView"
-            android:layout_width="270dp"
+        <RelativeLayout
+            android:layout_width="271dp"
             android:layout_margin="20dp"
-            android:layout_height="170dp"
+            android:layout_height="wrap_content"
             android:layout_gravity="center"
-            android:background="#ffffff"
-            app:sv_speedometerWidth="20dp"
-            app:sv_unit="dBm"
-            app:sv_textColor="#ffffff"
-            app:sv_markColor="#000000"
-            app:sv_highSpeedColor="#393939"
-            app:sv_lowSpeedColor="#a4a4a4"
-            app:sv_mediumSpeedColor="#707070"
-            app:sv_indicatorColor="#ea3030"
-            app:sv_speedTextColor="#000000"
-            app:sv_unitTextColor="#000000"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="17dp" />
+            android:layout_marginTop="17dp"
+            android:background="#ffffff"
+            >
+            <com.github.anastr.speedviewlib.SpeedView
+                android:id="@+id/speedView"
+                android:layout_width="270dp"
+                android:layout_margin="20dp"
+                android:layout_height="170dp"
+                app:sv_speedometerWidth="20dp"
+                app:sv_unit="dBm"
+                app:sv_textColor="#ffffff"
+                app:sv_markColor="#000000"
+                app:sv_highSpeedColor="#393939"
+                app:sv_lowSpeedColor="#a4a4a4"
+                app:sv_mediumSpeedColor="#707070"
+                app:sv_indicatorColor="#ea3030"
+                app:sv_speedTextColor="#000000"
+                app:sv_unitTextColor="#000000"
+                />
+
+            <TextView
+                android:id="@+id/textView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignBottom="@+id/speedView"
+                android:layout_alignStart="@+id/speedView"
+                android:layout_marginBottom="14dp"
+                android:layout_marginStart="36dp"
+                android:text="       -"
+                android:textColor="#000000"
+                android:textSize="20sp" />
+        </RelativeLayout>
 
         <TextView
             android:id="@+id/textVIew"
@@ -53,9 +72,10 @@
             android:id="@+id/btnModal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_centerHorizontal="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignStart="@+id/textView"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="63dp"
             android:background="@drawable/know_more_btn"
             android:fontFamily="@font/montserrat"
             android:paddingLeft="18dp"
