--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -18,6 +18,7 @@
         android:layout_height="match_parent">
 
         <RelativeLayout
+            android:visibility="gone"
             android:layout_width="271dp"
             android:layout_margin="20dp"
             android:layout_height="wrap_content"
@@ -56,6 +57,22 @@
                 android:textSize="20sp" />
         </RelativeLayout>
 
+        <com.mikhaellopez.circularfillableloaders.CircularFillableLoaders
+            android:id="@+id/circularfill"
+            android:layout_width="271dp"
+            android:layout_margin="20dp"
+
+            android:layout_height="271dp"
+            android:layout_gravity="center"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="17dp"
+            android:src="@drawable/tower1"
+            app:cfl_border="true"
+            app:cfl_border_width="12dp"
+            app:cfl_progress="80"
+            app:cfl_wave_amplitude="0.01"
+            app:cfl_wave_color="#3f51b5"
+            />
         <TextView
             android:id="@+id/textVIew"
             android:layout_width="wrap_content"
@@ -75,11 +92,13 @@
             android:layout_alignParentTop="true"
             android:layout_alignStart="@+id/textView"
             android:layout_gravity="center_horizontal"
-            android:layout_marginTop="63dp"
+            android:layout_marginTop="43dp"
             android:background="@drawable/know_more_btn"
             android:fontFamily="@font/montserrat"
             android:paddingLeft="18dp"
             android:paddingRight="18dp"
+            android:layout_marginBottom="5dp"
+            android:elevation="3dp"
             android:text="Know more"
             android:textColor="#101010" />
 
