--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -11,10 +11,15 @@
         android:icon="@drawable/ic_map_black_24dp"
         android:title="Maps" />
 
-    <!--item
+    <item
         android:id="@+id/navigation_chatbot"
         android:icon="@drawable/ic_dashboard_black_24dp"
-        android:title="Chatbot" /-->
+        android:title="Chatbot" />
+
+    <!--item
+        android:id="@+id/navigation_feedback"
+        android:icon="@drawable/ic_dashboard_black_24dp"
+        android:title="SPEEDTEST" /-->
 
     <item
         android:id="@+id/navigation_settings"
